--- a/portfolio.html
+++ b/portfolio.html
@@ -22,34 +22,39 @@
   </head>
   <body>
     <!--Шапка-->
-    <header class="main-header">
-      <div class="container main-nav">
-        <nav class="main-nav-link">
-          <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-          <ul class="header-list">
-            <li class="list">
-              <a class="header-link header-link-bottom" href="./index.html">Студия</a>
+    <header class="header">
+      <div class="container header__inner">
+        <nav class="header__nav">
+          <a class="logo" href="./index.html"><span class="logo__web">Web</span>Studio</a>
+          <ul class="list header__list-nav">
+            <li class="item">
+              <a class="header__link header__link--line" href="./index.html">Студия</a>
             </li>
-            <li class="list">
-              <a class="header-link header-link-bottom portfolio-bottom" href="./portfolio.html"
+            <li class="item">
+              <a
+                class="header__link header__link--line header__link--portfolio-page"
+                href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="list"><a class="header-link header-link-bottom" href="#">Контакты</a></li>
+            <li class="item"><a class="header__link header__link--line" href="#">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="header-list-contact">
-          <li class="list item-contact">
-            <a class="header-link header-contact icon" href="mailto:info@devstudio.com">
-              <svg width="16" height="12" class="header-icon">
+        <ul class="list header__list-contact">
+          <li class="item header__item-contact">
+            <a
+              class="header__link header__link-contact header__svg"
+              href="mailto:info@devstudio.com"
+            >
+              <svg width="16" height="12" class="header__icon">
                 <use href="./img/icons.svg#icon-list"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="list item-contact">
-            <a class="header-link header-contact icon" href="tel:+380961111111">
-              <svg width="10" height="16" class="header-icon">
+          <li class="item header__item-contact">
+            <a class="header__link header__link-contact header__svg" href="tel:+380961111111">
+              <svg width="10" height="16" class="header__icon">
                 <use href="./img/icons.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -62,184 +67,184 @@
       <!--Портфолио-->
       <section class="section">
         <div class="container">
-          <h1 hidden>Портфолио</h1>
-          <ul class="portfolio-list">
-            <li class="list portfolio-item">
-              <button class="portfolio-btn" type="button">Все</button>
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="list filter">
+            <li class="item">
+              <button class="filter__btn" type="button">Все</button>
             </li>
-            <li class="list portfolio-item">
-              <button class="portfolio-btn" type="button">Веб-сайты</button>
+            <li class="item">
+              <button class="filter__btn" type="button">Веб-сайты</button>
             </li>
-            <li class="list portfolio-item">
-              <button class="portfolio-btn" type="button">Приложения</button>
+            <li class="item">
+              <button class="filter__btn" type="button">Приложения</button>
             </li>
-            <li class="list portfolio-item">
-              <button class="portfolio-btn" type="button">Дизайн</button>
+            <li class="item">
+              <button class="filter__btn" type="button">Дизайн</button>
             </li>
-            <li class="list portfolio-item">
-              <button class="portfolio-btn" type="button">Маркетинг</button>
+            <li class="item">
+              <button class="filter__btn" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="portfolio-type">
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+          <ul class="list card">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/1.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Технокряк</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="card__border">
+                  <h2 class="card__title">Технокряк</h2>
+                  <p class="card__desc">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/2.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="card__border">
+                  <h2 class="card__title">Постер New Orlean vs Golden Star</h2>
+                  <p class="card__desc">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/3.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="card__border">
+                  <h2 class="card__title">Ресторан Seafood</h2>
+                  <p class="card__desc">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/4.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Проект Prime</h2>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="card__border">
+                  <h2 class="card__title">Проект Prime</h2>
+                  <p class="card__desc">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/5.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Проект Boxes</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="card__border">
+                  <h2 class="card__title">Проект Boxes</h2>
+                  <p class="card__desc">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/6.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="card__border">
+                  <h2 class="card__title">Inspiration has no Borders</h2>
+                  <p class="card__desc">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/7.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Издание Limited Edition</h2>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="card__border">
+                  <h2 class="card__title">Издание Limited Edition</h2>
+                  <p class="card__desc">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/8.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Проект LAB</h2>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="card__border">
+                  <h2 class="card__title">Проект LAB</h2>
+                  <p class="card__desc">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="list cards-overlay">
-              <a href="" class="portfolio-link-hover">
-                <div class="portfolio-cards">
+            <li class="item card__item">
+              <a href="" class="card__link">
+                <div class="card__overflow">
                   <img src="./img/portfolio/9.jpg" alt="" />
-                  <div class="porfolio-cards-overlay">
-                    <p class="portfolio-overlay-text">
+                  <div class="card__overlay">
+                    <p class="card__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-border">
-                  <h2 class="portfolio-title">Growing Business</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="card__border">
+                  <h2 class="card__title">Growing Business</h2>
+                  <p class="card__desc">Приложение</p>
                 </div>
               </a>
             </li>
@@ -247,54 +252,56 @@
         </div>
       </section>
     </main>
-    <footer class="footer-content">
+    <footer class="footer">
       <!--Подвал-->
       <div class="container footer-section">
         <div>
-          <a class="logo logo-footer" href="./index.html"
-            ><span class="logo-web">Web</span>Studio</a
+          <a class="logo logo--footer" href="./index.html"
+            ><span class="logo__web">Web</span>Studio</a
           >
           <address>
-            <a class="maps-link" href="https://goo.gl/maps/QTUrrY7Di1VDdfHk6"
+            <a class="footer__maps" href="https://goo.gl/maps/QTUrrY7Di1VDdfHk6"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </address>
-          <a class="header-link footer-link footer-link-padding" href="mailto:info@devstudio.com"
+          <a
+            class="header__link footer__link footer__link--padding"
+            href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
-          <a class="header-link footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header__link footer__link" href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
-        <div class="footer-svg">
-          <p class="footer-link-text">присоединяйтесь</p>
-          <div class="footer-icon">
-            <ul class="footer-list">
-              <li class="footer-icon-bg">
-                <a href="" class="footer-link-svg">
-                  <svg width="20" height="20" class="footer-icon-link">
+        <div class="footer__inner-svg">
+          <p class="footer__link-label">присоединяйтесь</p>
+          <div>
+            <ul class="list footer__list">
+              <li class="item">
+                <a href="" class="footer__link-svg">
+                  <svg width="20" height="20" class="footer__icon">
                     <use href="./img/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="footer-icon-bg">
-                <a href="" class="footer-link-svg">
-                  <svg width="20" height="20" class="footer-icon-link">
+              <li class="item">
+                <a href="" class="footer__link-svg">
+                  <svg width="20" height="20" class="footer__icon">
                     <use href="./img/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="footer-icon-bg">
-                <a href="" class="footer-link-svg">
-                  <svg width="20" height="20" class="footer-icon-link">
+              <li class="item">
+                <a href="" class="footer__link-svg">
+                  <svg width="20" height="20" class="footer__icon">
                     <use href="./img/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="footer-icon-bg">
-                <a href="" class="footer-link-svg">
-                  <svg width="20" height="20" class="footer-icon-link">
+              <li class="item">
+                <a href="" class="footer__link-svg">
+                  <svg width="20" height="20" class="footer__icon">
                     <use href="./img/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -304,14 +311,14 @@
         </div>
         <div class="conteiner-form-footer">
           <form class="footer-form">
-            <label class="footer-label">
-              <span class="footer-text">Подпишитесь на рассылку</span>
-              <input type="email" name="email" class="footer-input" placeholder="E-mail" />
+            <label class="footer-form__label">
+              <span class="footer-form__text">Подпишитесь на рассылку</span>
+              <input type="email" name="email" class="footer-form__input" placeholder="E-mail" />
             </label>
           </form>
-          <button class="footer-btn">
+          <button class="footer-form__btn">
             Подписаться
-            <svg width="24" height="24" class="icon-btn">
+            <svg width="24" height="24" class="footer-form__icon">
               <use href="./img/icons.svg#icon-send"></use>
             </svg>
           </button>
