--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Шапка-->
@@ -126,9 +126,9 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="section">
+      <section class="section suggest-section">
         <div class="container">
-          <h2 class="section__title suggest-title">Чем мы занимаемся</h2>
+          <h2 class="section__title suggest-section__title">Чем мы занимаемся</h2>
           <ul class="list suggest">
             <li class="item suggest__item">
               <img
@@ -169,7 +169,7 @@
       <!--Наша команда-->
       <section class="comand-section section">
         <div class="container">
-          <h2 class="section__title main-comand-title">Наша команда</h2>
+          <h2 class="section__title comand-section__title">Наша команда</h2>
           <ul class="list comand">
             <li class="item comand__border">
               <img
@@ -357,9 +357,9 @@
         </div>
       </section>
       <!-- Постоянные клиенты -->
-      <section class="section">
+      <section class="section clients-section">
         <div class="container">
-          <h2 class="clients-title">Постоянные клиенты</h2>
+          <h2 class="clients-section__title">Постоянные клиенты</h2>
           <div>
             <ul class="list clients">
               <li class="item">
@@ -417,7 +417,7 @@
 
     <footer class="footer">
       <!--Подвал-->
-      <div class="container footer-section">
+      <div class="container footer__inner">
         <div>
           <a class="logo logo--footer" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
