--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body>
     <!--Шапка-->
@@ -254,7 +254,7 @@
     </main>
     <footer class="footer">
       <!--Подвал-->
-      <div class="container footer-section">
+      <div class="container footer__inner">
         <div>
           <a class="logo logo--footer" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
